welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:13: error: type mismatch;
 found   : Unit
 required: Int
		compteur=compteur+1 
                        ^countTeen:12: error: type mismatch;
 found   : Unit
 required: Int
	if ( 13<=d && d<=19){
        ^